Added Javadoc to changed java classes. index.html Added plagiarism results button that does nothing at the moment. app.js Configured updateReview, updateSandBox, embeddablSendFiles and embeddablRun functions - UNTESTED

--- a/joop/src/main/resources/static/index.html
+++ b/joop/src/main/resources/static/index.html
@@ -37,6 +37,7 @@
                     </select>
                     <br>
                     <button type="button" ng-click="runPlagiarism()" class="btn btn-primary">Run plagiarism</button>
+                    <button type="button" onclick="" class="btn btn-primary" id="plagiarismResults">Results</button>
                     <!--form>
                         <input type="text" ng-model="query" class="form-control">
                     </form-->
