Java: created queue in EmbeddablService and added the functionality in SandBoxController and CentralGitHookService. Put add and remove from queue methods to SandBoxService. UI: Changed Create review to Update review

--- a/joop/src/main/resources/static/index.html
+++ b/joop/src/main/resources/static/index.html
@@ -111,7 +111,7 @@
                     </div>
                     <div class="col-sm-3 ml-auto">
                         <ul>
-                            <li><a id="createReview" href="" ng-click="updateReview()" ng-disabled="isDisabled(selectedStudentTask, '#createReview')">Create review</a></li>
+                            <li><a id="createReview" href="" ng-click="updateReview()" ng-disabled="isDisabled(selectedStudentTask, '#createReview')">Update review</a></li>
                             <li><a id="openReview" href="{{ selectedStudentTask.review.link }}" target="_blank" ng-disabled="isDisabled(selectedStudentTask.review.link, '#openReview')">Open review</a></li>
                             <li><a id="sendFeedback" href="" ng-click="sendMail()" ng-disabled="isDisabled(selectedStudentTask.review.reviewId, '#sendFeedback')">Send feedback</a></li>
                         </ul>
